--- a/cgv_photo_mobile_html/WebContent/pub/Phototicket_completed.html
+++ b/cgv_photo_mobile_html/WebContent/pub/Phototicket_completed.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>CGV</title>
     <!-- [S] 운영소스 상속용 -->
     <link rel="shortcut icon" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
@@ -16,16 +16,6 @@
     <link rel="stylesheet" type="text/css" href="http://img.cgv.co.kr/WebApp/css/eggupdateV4.css">
     <link rel="stylesheet" type="text/css" href="http://img.cgv.co.kr/WebApp/css/v5/master.css?2019072509">
     <link rel="canonical" href="http://www.cgv.co.kr/">
-    <!--
-    [S] 2020.04.20
-    작성자 : 이주연
-    내용 : 포토티켓 추가
-    -->
-    <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <link rel="stylesheet" type="text/css" href="../css/phototicket.css">
-    <link rel="stylesheet" type="text/css" href="../css/swiper.min.css">
-    <!--  [S] 2020.04.20	-->
     <script type="text/javascript" async="" src="http://www.google-analytics.com/analytics.js"></script>
     <script type="text/javascript" async="" src="http://www.google-analytics.com/plugins/ua/ec.js"></script>
     <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/appinterface.js"></script>
@@ -34,15 +24,9 @@
     <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/Common/jquery.menu.js"></script>
     <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/Common/jindo.mobile.min.js"></script>
     <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/Common/jindo.mobile.core.min.js"></script>
-    <!--    <script type="text/javascript" src="../js/morder.common.js"></script>-->
-    <!--    <script type="text/javascript" src="../js/morder.appInterface.js"></script>-->
+    <script type="text/javascript" src="../js/morder.appInterface.js"></script>
     <script type="text/javascript" src="../js/clipboard.min.js"></script>
     <script type="text/javascript" src="../js/date.js"></script>
-    <!--  [S] 2020.04.20 추가	-->
-    <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="../js/swiper.min.js"></script>
-    <script type="text/javascript" src="../js/phototicket.js"></script>
-    <!--  [E] 2020.04.20 추가	-->
     <script type="text/javascript">
         //Global Variable
         var IsWebView_Master = false;
@@ -57,7 +41,7 @@
             var strIphonenavi = "";
             if (IsWebViewIPhone_Master && strIphonenavi == "Y") {
                 var tmp_url = location.href;
-                history.pushState({iphonenavi: "Y"}, "iphoneNaviExHandle", tmp_url);
+                history.pushState({ iphonenavi: "Y" }, "iphoneNaviExHandle", tmp_url);
                 var tmp_url_rep = tmp_url.replace(/iphonenavi=Y/i, "");
                 location.href = tmp_url_rep;
             }
@@ -67,15 +51,26 @@
     <meta property="og:title" content="CGV 패키지">
     <meta property="og:image" content="http://img.cgv.co.kr/GiftStore/Product/Mobile/List/15463255661470.jpg">
     <meta property="og:description" content="데이트 고민은 그만, CGV패키지가 정답">
-    <meta property="al:ios:url"
-          content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
+    <meta property="al:ios:url" content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
     <meta property="al:ios:app_store_id" content="370441190">
     <meta property="al:ios:app_name" content="CGV">
-    <meta property="al:android:url"
-          content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
+    <meta property="al:android:url" content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
     <meta property="al:android:package" content="com.cgv.android.movieapp">
     <meta property="al:android:app_name" content="CGV">
     <!-- [E] 운영소스 상속용 -->
+
+    <!--
+    [S] 2020.04.20
+    작성자 : 이주연
+    내용 : 포토티켓 추가
+    -->
+    <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="../js/swiper.min.js"></script>
+    <script type="text/javascript" src="../js/phototicket.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/phototicket.css">
+    <link rel="stylesheet" type="text/css" href="../css/swiper.min.css">
+    <!--  [E] 2020.04.20	-->
 </head>
 <body class="bg_white">
 <div class="header_wrap" style="display:none;" id="header_wrap"></div>
@@ -84,16 +79,11 @@
     <!-- [S] Header -->
     <div id="header_box" class="pt_header">
         <header id="headerTitle">
-            <a href="javascript:void(0);">
-                <div class="title_area">
-                    <i class="sprite sprite-pt sprite-icBack"></i>
-                </div>
+            <a class="title_area" href="javascript:void(0);">
+                <i class="sprite sprite-pt sprite-icBack"></i>
             </a>
             <div class="title" id="headerTitleArea">내 포토티켓</div>
             <div class="btn_wrap">
-<!--                <a class="btn_info" href="javascript:void(0);">-->
-<!--                    <i class="sprite sprite-pt sprite-icInfo"></i>-->
-<!--                </a>-->
                 <a class="btn_menu" href="javascript:siteMapFn();">
                     <i class="sprite sprite-pt sprite-icSideMenu"></i>
                 </a>
@@ -183,12 +173,10 @@
                     <div class="movie_info">
                         <p class="title">클로젯</p>
                         <div class="info">
-                            <span class="title">관람일</span>
-                            <span class="date">2020.03.29(일)</span>
+                            <span class="title">관람일</span><span class="date">2020.03.29(일)</span>
                         </div>
                         <div class="info">
-                            <span class="title">제작일</span>
-                            <span class="date">2020.03.29(일)</span>
+                            <span class="title">제작일</span><span class="date">2020.03.29(일)</span>
                         </div>
                     </div>
                     <!--
@@ -208,12 +196,10 @@
                     <div class="movie_info">
                         <p class="title">작은아씨들</p>
                         <div class="info">
-                            <span class="title">관람일</span>
-                            <span class="date">2020.03.29(일)</span>
+                            <span class="title">관람일</span><span class="date">2020.03.29(일)</span>
                         </div>
                         <div class="info">
-                            <span class="title">제작일</span>
-                            <span class="date">2020.03.29(일)</span>
+                            <span class="title">제작일</span><span class="date">2020.03.29(일)</span>
                         </div>
                     </div>
                     <div class="badge badge-red">
@@ -230,12 +216,10 @@
                         <p class="title">다크워터스</p>
                         <p class="tip">광주 충장로점 출력가능</p>
                         <div class="info">
-                            <span class="title">관람일</span>
-                            <span class="date">2020.03.29(일)</span>
+                            <span class="title">관람일</span><span class="date">2020.03.29(일)</span>
                         </div>
                         <div class="info">
-                            <span class="title">제작일</span>
-                            <span class="date">2020.03.29(일)</span>
+                            <span class="title">제작일</span><span class="date">2020.03.29(일)</span>
                         </div>
                     </div>
                     <div class="badge badge-red">
@@ -250,12 +234,10 @@
                     <div class="movie_info">
                         <p class="title">어바웃타임(인생영화인생영화)</p>
                         <div class="info">
-                            <span class="title">관람일</span>
-                            <span class="date">2020.03.29(일)</span>
+                            <span class="title">관람일</span><span class="date">2020.03.29(일)</span>
                         </div>
                         <div class="info">
-                            <span class="title">제작일</span>
-                            <span class="date">2020.03.29(일)</span>
+                            <span class="title">제작일</span><span class="date">2020.03.29(일)</span>
                         </div>
                     </div>
                     <div class="badge badge_blue">
@@ -271,18 +253,18 @@
                     <div class="movie_info">
                         <p class="title">타오르는 여인의 초상</p>
                         <div class="info">
-                            <span class="title">관람일</span>
-                            <span class="date">2020.03.29(일)</span>
+                            <span class="title">관람일</span><span class="date">2020.03.29(일)</span>
                         </div>
                         <div class="info">
-                            <span class="title">제작일</span>
-                            <span class="date">2020.03.29(일)</span>
+                            <span class="title">제작일</span><span class="date">2020.03.29(일)</span>
                         </div>
                     </div>
                     <div class="badge badge_blue">
                         <p class="dday">D-20</p>
                         <p class="txt">출력가능일</p>
                     </div>
+                </a>
+                <a class="btn_grey" href="javascript:void(0);">더보기 <i class="sprite sprite-pt sprite-icDownMore"></i>
                 </a>
             </div>
         </article>
