--- a/cgv_photo_mobile_html/WebContent/pub/Phototicket_main_web.html
+++ b/cgv_photo_mobile_html/WebContent/pub/Phototicket_main_web.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>CGV</title>
     <!-- [S] 운영소스 상속용 -->
     <link rel="shortcut icon" href="http://img.cgv.co.kr/WebApp/images/common/favicon_cgv.png">
@@ -16,11 +16,6 @@
     <link rel="stylesheet" type="text/css" href="http://img.cgv.co.kr/WebApp/css/eggupdateV4.css">
     <link rel="stylesheet" type="text/css" href="http://img.cgv.co.kr/WebApp/css/v5/master.css?2019072509">
     <link rel="canonical" href="http://www.cgv.co.kr/">
-    <!--  [S] 2020.04.20 추가	-->
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <link rel="stylesheet" type="text/css" href="../css/phototicket.css">
-    <link rel="stylesheet" type="text/css" href="../css/swiper.min.css">
-    <!--  [E] 2020.04.20 추가	-->
     <script type="text/javascript" async="" src="http://www.google-analytics.com/analytics.js"></script>
     <script type="text/javascript" async="" src="http://www.google-analytics.com/plugins/ua/ec.js"></script>
     <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/appinterface.js"></script>
@@ -29,15 +24,9 @@
     <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/Common/jquery.menu.js"></script>
     <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/Common/jindo.mobile.min.js"></script>
     <script type="text/javascript" src="http://img.cgv.co.kr/WebApp/js/Common/jindo.mobile.core.min.js"></script>
-    <!--    <script type="text/javascript" src="../js/morder.common.js"></script>-->
-    <!--    <script type="text/javascript" src="../js/morder.appInterface.js"></script>-->
+    <script type="text/javascript" src="../js/morder.appInterface.js"></script>
     <script type="text/javascript" src="../js/clipboard.min.js"></script>
     <script type="text/javascript" src="../js/date.js"></script>
-    <!--  [S] 2020.04.20 추가	-->
-    <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="../js/swiper.min.js"></script>
-    <script type="text/javascript" src="../js/phototicket.js"></script>
-    <!--  [E] 2020.04.20 추가	-->
     <script type="text/javascript">
         //Global Variable
         var IsWebView_Master = false;
@@ -52,7 +41,7 @@
             var strIphonenavi = "";
             if (IsWebViewIPhone_Master && strIphonenavi == "Y") {
                 var tmp_url = location.href;
-                history.pushState({iphonenavi: "Y"}, "iphoneNaviExHandle", tmp_url);
+                history.pushState({ iphonenavi: "Y" }, "iphoneNaviExHandle", tmp_url);
                 var tmp_url_rep = tmp_url.replace(/iphonenavi=Y/i, "");
                 location.href = tmp_url_rep;
             }
@@ -62,15 +51,26 @@
     <meta property="og:title" content="CGV 패키지">
     <meta property="og:image" content="http://img.cgv.co.kr/GiftStore/Product/Mobile/List/15463255661470.jpg">
     <meta property="og:description" content="데이트 고민은 그만, CGV패키지가 정답">
-    <meta property="al:ios:url"
-          content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
+    <meta property="al:ios:url" content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
     <meta property="al:ios:app_store_id" content="370441190">
     <meta property="al:ios:app_name" content="CGV">
-    <meta property="al:android:url"
-          content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
+    <meta property="al:android:url" content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
     <meta property="al:android:package" content="com.cgv.android.movieapp">
     <meta property="al:android:app_name" content="CGV">
     <!-- [E] 운영소스 상속용 -->
+
+    <!--
+    [S] 2020.04.20
+    작성자 : 이주연
+    내용 : 포토티켓 추가
+    -->
+    <script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="../js/swiper.min.js"></script>
+    <script type="text/javascript" src="../js/phototicket.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/phototicket.css">
+    <link rel="stylesheet" type="text/css" href="../css/swiper.min.css">
+    <!--  [E] 2020.04.20	-->
 </head>
 <body class="bg_white">
 <div class="header_wrap" style="display:none;" id="header_wrap"></div>
@@ -79,11 +79,8 @@
     <!-- [S] Header -->
     <div id="header_box" class="pt_header">
         <header id="headerTitle">
-            <a href="javascript:void(0);">
-                <div class="title_area">
-                    <i class="sprite sprite-pt sprite-icBack"></i>
-                    <!--						<img id="siteMapBtn" src="http://img.cgv.co.kr/WebApp/images/common/btn_gnbV4.png" alt="전체메뉴"><img id="headerLeftBtn" src="" style="display: none;"/>-->
-                </div>
+            <a class="title_area" href="javascript:void(0);">
+                <i class="sprite sprite-pt sprite-icBack"></i>
             </a>
             <div class="title" id="headerTitleArea">포토티켓</div>
             <div class="btn_wrap">
@@ -443,9 +440,7 @@
                                 <span class="user">good_photo</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>999</span>
                             </div>
-                            <div class="btn_like">
-                                <a><i class="sprite sprite-pt sprite-icLikeSel"></i></a>
-                            </div>
+                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
                     </div>
                     <div class="col ">
@@ -457,9 +452,7 @@
                                 <span class="user">good_photo</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>19,932</span>
                             </div>
-                            <div class="btn_like">
-                                <a><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
-                            </div>
+                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
                     </div>
                 </div>
@@ -473,9 +466,7 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>10</span>
                             </div>
-                            <div class="btn_like">
-                                <a><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
-                            </div>
+                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
                     </div>
                     <div class="col ">
@@ -487,9 +478,7 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>19,932</span>
                             </div>
-                            <div class="btn_like">
-                                <a><i class="sprite sprite-pt sprite-icLikeSel"></i></a>
-                            </div>
+                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
                     </div>
                 </div>
@@ -503,9 +492,7 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>435</span>
                             </div>
-                            <div class="btn_like">
-                                <a><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
-                            </div>
+                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
                     </div>
                     <div class="col ">
@@ -517,30 +504,12 @@
                                 <span class="user">usernickname</span>
                                 <span class="count_like"><i class="sprite sprite-pt sprite-icLikeGray"></i>435</span>
                             </div>
-                            <div class="btn_like">
-                                <a><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
-                            </div>
+                            <a class="btn_like" href="javascript:void(0);" ><i class="sprite sprite-pt sprite-icLikeNor"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </article>
-        <!--        <script>-->
-        <!--            function setSlider() {-->
-        <!--                var nWindowWidth = $(window).width();-->
-        <!--                var nPadding = (nWindowWidth - 260) / 2;-->
-        <!--                $('.slider_wrap .swiper-container')-->
-        <!--                    .css({-->
-        <!--                        'width': '100%',-->
-        <!--                        'margin': '0 auto',-->
-        <!--                        'padding-left': nPadding-->
-        <!--                    })-->
-        <!--            }-->
-        <!--            setSlider();-->
-        <!--            $(window).resize(function () {-->
-        <!--                location.reload();-->
-        <!--            });-->
-        <!--        </script>-->
         <!--  [E] 포토티켓 자랑하기   -->
 
     </section>
