--- a/cgv_photo_mobile_html/WebContent/pub/Phototicket_main_no.html
+++ b/cgv_photo_mobile_html/WebContent/pub/Phototicket_main_no.html
@@ -336,7 +336,7 @@
 
 
             </ul>
-            <a href="javascript:void(0);" class="btnFirstMove" style="display: inline;"></a>
+<!--            <a href="javascript:void(0);" class="btnFirstMove" style="display: inline;"></a>-->
         </article>
         <!-- [E] 영화 예매 차트     -->
 
