--- a/cgv_photo_mobile_html/WebContent/pub/Phototicket_printed.html
+++ b/cgv_photo_mobile_html/WebContent/pub/Phototicket_printed.html
@@ -150,8 +150,8 @@
         <!-- [E] siteMap -->
         <nav id="navMain" class="type_pt" style="position: static; top: initial;">
             <div class="inner">
-                <a href="javascript:void(0);" onclick="" id="">제작완료(10)</a>
-                <a class="active" href="javascript:void(0);" onclick="" id="">출력완료(3)</a>
+                <a class="_tab" href="javascript:void(0);" onclick="" id="">제작완료(10)</a>
+                <a class="_tab" href="javascript:void(0);" onclick="" id="">출력완료(3)</a>
                 <a class="icon_search" href="javascript:void(0);" onclick="" id=""><i
                         class="sprite sprite-pt sprite-icFilterDateSel"></i>기간검색</a>
             </div>
