--- a/cgv_photo_mobile_html/WebContent/pub/Phototicket_main_web.html
+++ b/cgv_photo_mobile_html/WebContent/pub/Phototicket_main_web.html
@@ -287,6 +287,7 @@
         <script>
             var photoTicketEventSlider = new Swiper('.alert_wrap .swiper-container', {
                 speed: 400,
+                autoPlay: true,
                 direction: 'horizontal',
                 loop: true,
                 spaceBetween: 40,
