--- a/cgv_photo_mobile_html/WebContent/pub/phototicket_index.html
+++ b/cgv_photo_mobile_html/WebContent/pub/phototicket_index.html
@@ -142,16 +142,24 @@
 					 <td>포토티켓 </td>
 					 <td>제작완료</td>
 					 <td class="filelink"><a href="./Phototicket_completed.html" title="새창열림" target="_blank">./Phototicket_completed.html</a></td>
-					 <td class="hidden-phone">작업중</td>
-					 <td class="hidden-phone">script 추가 예정</td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone"></td>
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
 					 <td>포토티켓 </td>
 					 <td>출력완료</td>
 					 <td class="filelink"><a href="./Phototicket_printed.html" title="새창열림" target="_blank">./Phototicket_printed.html</a></td>
-					 <td class="hidden-phone">작업중</td>
-					 <td class="hidden-phone">script 추가 예정</td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone"></td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>포토티켓 </td>
+					 <td>제작완료_자랑취소 A/뒷면</td>
+					 <td class="filelink"><a href="./Phototicket_completed_boast.html" title="새창열림" target="_blank">./Phototicket_completed_boast.html</a></td>
+					 <td class="hidden-phone">진행중</td>
+					 <td class="hidden-phone"></td>
 				 </tr>
             </tbody>
         </table>
